--- a/regress/usr.bin/seq/Makefile
+++ b/regress/usr.bin/seq/Makefile
@@ -1,7 +1,12 @@
-#	$OpenBSD: Makefile,v 1.1 2023/06/12 20:19:45 millert Exp $
+#	$OpenBSD: Makefile,v 1.2 2023/06/13 04:59:10 anton Exp $
 
 SEQ?=	/usr/bin/seq
 
+CLEANFILES+=	*.out
+
+REGRESS_TARGETS+=seqtest
 seqtest:
 	sh ${.CURDIR}/$@.sh ${SEQ} $@.out
 	diff ${.CURDIR}/$@.expected $@.out
+
+.include <bsd.regress.mk>
